=============================================================
Version 3.2.4
=============================================================

    - Bugfix: [import] Correction of the SQL query retrieving the product by an attribute value
    - Bugfix: Use of the native SQL count to retrieve the number of elements in the grids

=============================================================
Version 3.2.3
=============================================================

    - Feature: Adding new links to the Lengow Help Center and Support
    - Feature: Adding customer_vat_number in admin order detail & lengow_order table
    - Bugfix: Always load iframe over HTTPS

=============================================================
Version 3.2.2
=============================================================

    - Feature: [import] Addition of order types in the order management screen
    - Feature: [import] Addition of the currency conversion option in the order option panel
    - Feature: [import] Integration of the region code in the delivery and billing addresses
    - Bugfix: Add isset in case some var were unset causing multiple php notice
    - Bugfix: Update of the access token when recovering an http 401 code

=============================================================
Version 3.2.1
=============================================================

    - Bugfix: [export] Change condition for find combinations attributes
    - Bugfix: Addition of the http 201 code in the success codes

=============================================================
Version 3.2.0
=============================================================

    - Feature: Adding compatibility with php 7.3
    - Feature: [import] Protection of the import of anonymized orders
    - Feature: [import] Protection of the import of orders older than 3 months
    - Feature: Refactoring and optimization of the connector class
    - Feature: Optimization of API calls for synchronisation of orders and actions