@@ -21,7 +21,7 @@
 /classes/models/LengowTaxRule.php|3b761db12eff6f1d7b0faf9d5cde3945
 /classes/models/LengowCheck.php|7e35696c5a8b5ba77e4f7313073f2aa1
 /classes/models/LengowFile.php|2e8fc51402f9b899b63c2d8a3ef97441
-/classes/models/LengowCart.php|72558861f51dcca5c8fddb48208c36ba
+/classes/models/LengowCart.php|f15013d5d97bb383fe4d90301dc46ca0
 /classes/models/LengowProduct.php|cd6c4559cbabd47f07f6c1ff50aba31d
 /classes/models/LengowEmployee.php|fad8fea4a3593f527a3e5e30608189a9
 /classes/models/LengowPaymentModule.php|06c932210cf23dae04b284ed731dcd88
@@ -45,7 +45,7 @@
 /classes/models/LengowMethod.php|3a4c51e8869a105c85e2c07a20d6f4cc
 /classes/models/LengowHook.php|f9e1413e2aa091928e1dea799cf2beae
 /classes/models/LengowGender.php|dea9180e4a2a99f802b4d2b64c6b038a
-/classes/models/LengowImport.php|c4ff9c57acf74178e6d50c09f83abcad
+/classes/models/LengowImport.php|fd51f43a4ba6d226c8bf96f5ad38bd5f
 /classes/models/LengowConfigurationForm.php|587545f731c69c5e8bc7857032cf17e0
 /classes/models/LengowInstall.php|fc9c041a6f0a593937b80e420d6912e1
 /classes/models/LengowImportOrder.php|0acf0c87e817a57aadf69ed6b2921d56
@@ -53,13 +53,13 @@
 /classes/models/LengowConfiguration.php|e6d73a13476fd77cbffb49a64f6ba188
 /classes/controllers/LengowHomeController.php|13dc86eaf9de53e1e952453368d28df2
 /classes/controllers/index.php|ed8e273082cc0a58535dc2b454435f38
-/classes/controllers/LengowFeedController.php|f0c74ddb1ac1c108431520422ed9e031
+/classes/controllers/LengowFeedController.php|55eebfeb5a4d983bafba705c7bbbad3d
 /classes/controllers/LengowController.php|a64436026813e0db13d36f1253f97a19
 /classes/controllers/LengowMainSettingController.php|42c275d6ea72c28ad6349389400fbf51
 /classes/controllers/LengowHelpController.php|1d8884f2ccf752e3fad5211b0ff0dea8
 /classes/controllers/LengowOrderSettingController.php|99cc6dc6c5de0b93269b95cdc455c26b
 /classes/controllers/LengowLegalsController.php|f8cec875666fac608deea6380cd75925
-/classes/controllers/LengowOrderController.php|faa9b4990f41d5f0a109170373512875
+/classes/controllers/LengowOrderController.php|a4e2351700771b04d8b1b59b79abec09
 /controllers/admin/index.php|eb18f895c85303c2ced77482ec4ab525
 /controllers/admin/AdminLengowLegalsController.php|f40c7c5aedd61b251c14ad8a393ba7ad
 /controllers/admin/AdminLengowFeedController.php|76753c5fbfd21fcefaf7499a7cbd056b
@@ -137,7 +137,7 @@
 /views/templates/admin/lengow_help/helpers/view/view.tpl|7f53b826a9b93fca4dfd33acd08b361c
 /views/templates/admin/lengow_help/layout.tpl|8296463aac5333e3d045024628ee14d7
 /views/templates/admin/footer.tpl|a230f1fcbc174c95e52118ec9bb363e2
-/views/templates/admin/order/info_16.tpl|c7e6435d08d1acae831487b2e6dfbc1d
+/views/templates/admin/order/info_16.tpl|d394c23b1b4d1d79d94e6b3f7d25fbaa
 /views/templates/admin/order/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/templates/admin/order/info.tpl|40da73f1cf6dfcc9f70056ccac3084d3
 /views/templates/admin/lengow_order_setting/index.php|eb18f895c85303c2ced77482ec4ab525
