@@ -2,6 +2,7 @@
 Version 3.2.4
 =============================================================
 
+    - Feature: [import] Add compatibility with 1.7.7.x versions of PrestaShop
     - Bugfix: [import] Correction of the SQL query retrieving the product by an attribute value
     - Bugfix: Use of the native SQL count to retrieve the number of elements in the grids
 
